--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "history": "4",
+    "immer": "^7.0.9",
     "polished": "^3.6.6",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "reactotron-react-js": "^3.3.7",
+    "reactotron-redux": "^3.1.3",
+    "reactotron-redux-saga": "^4.2.3",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.1.1",
     "yup": "^0.29.3"
   },
